# packages

./: .gitignore  BITWUZLAConfig.cmake.in  CMakeLists.txt  GMPConfig.cmake.in  README.md  XEDConfig.cmake.in  bitwuzla.cmake  bitwuzlaConfig.cmake.in  build_vs.bat  cxx-common.Dockerfile  dependencies.Dockerfile  dependencies.md  download_llvm.cmake  extract_llvm.bat  gmp.cmake  hash.py  llvm-14.sh  llvm.Dockerfile  llvm.cmake  presentation.md  superbuild.cmake  ubuntu-dependencies.sh  vs2019.bat  xed.cmake
.github/workflows/: build.yml
llvm/: CMakeLists.txt  Dockerfile  README.md  ubuntu-dependencies.sh
llvm-versions/: llvm-14.sh  llvm-15.sh  llvm-16.sh  llvm-17.sh  llvm-18.sh  llvm-19.sh  llvm-20.sh  llvm-21.sh
test/: CMakeLists.txt  main.cpp
test/cmake/: FindLLVM-Wrapper.cmake
